feat(loader): center spinner with improved styling and add comprehensive loader management script

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
 
 <body class="bg-dark">
 
+    <!-- Loading Spinner -->
+    <div class="loader-container" id="loaderContainer">
+        <div>
+            <div class="loader">
+                <span></span>
+                <span></span>
+            </div>
+            <div class="loader-text">Loading...</div>
+        </div>
+    </div>
+
     <!-- header -->
     <header class="bg-dark text-light">
         <div class="container-fluid text-center text-light py-1 mt-1">
