--- a/checkout.html
+++ b/checkout.html
@@ -13,6 +13,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/modals.css">
+    <link rel="stylesheet" href="assets/css/checkout.css">
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -23,289 +24,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.10.5/dist/sweetalert2.min.css">
 
     <style>
-        .checkout-container {
-            min-height: 100vh;
-            background: linear-gradient(135deg, rgba(0, 0, 0, 0.9) 0%, rgba(20, 20, 20, 0.95) 100%);
-            padding: 2rem 0;
-        }
 
-        .checkout-card {
-            background: linear-gradient(135deg, rgba(30, 30, 30, 0.95) 0%, rgba(40, 40, 40, 0.9) 100%);
-            border: 2px solid rgba(255, 193, 7, 0.2);
-            border-radius: 15px;
-            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.5),
-                inset 0 1px 0 rgba(255, 193, 7, 0.1);
-            backdrop-filter: blur(10px);
-            transition: all 0.3s ease;
-        }
-
-        .checkout-card:hover {
-            border-color: rgba(255, 193, 7, 0.4);
-            box-shadow: 0 20px 60px rgba(255, 193, 7, 0.15),
-                inset 0 1px 0 rgba(255, 193, 7, 0.2);
-        }
-
-        .checkout-header {
-            border-bottom: 2px solid rgba(255, 193, 7, 0.2);
-            padding-bottom: 1.5rem;
-            margin-bottom: 2rem;
-        }
-
-        .checkout-header h1 {
-            background: linear-gradient(135deg, #ffc107 0%, #ff9800 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-            font-weight: 800;
-            letter-spacing: 1px;
-        }
-
-        .order-summary-card {
-            background: rgba(255, 193, 7, 0.05);
-            border-left: 4px solid #ffc107;
-            padding: 1.5rem;
-            border-radius: 10px;
-            margin-bottom: 2rem;
-        }
-
-        .summary-item {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 0.8rem 0;
-            border-bottom: 1px solid rgba(255, 193, 7, 0.1);
-        }
-
-        .summary-item:last-child {
-            border-bottom: none;
-        }
-
-        .summary-total {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            padding: 1rem 0;
-            margin-top: 1rem;
-            padding-top: 1.5rem;
-            border-top: 2px solid #ffc107;
-            font-size: 1.5rem;
-            font-weight: 800;
-            color: #ffc107;
-        }
-
-        .payment-method {
-            background: rgba(0, 0, 0, 0.3);
-            border: 2px solid rgba(255, 193, 7, 0.2);
-            border-radius: 10px;
-            padding: 1.5rem;
-            margin-bottom: 1.5rem;
-            cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .payment-method:hover {
-            border-color: rgba(255, 193, 7, 0.5);
-            background: rgba(255, 193, 7, 0.05);
-        }
-
-        .payment-method.active {
-            border-color: #ffc107;
-            background: rgba(255, 193, 7, 0.1);
-            box-shadow: 0 0 20px rgba(255, 193, 7, 0.3);
-        }
-
-        .payment-method input[type="radio"] {
-            margin-right: 1rem;
-        }
-
-        .form-control,
-        .form-select {
-            background: rgba(255, 255, 255, 0.05);
-            border: 2px solid rgba(255, 193, 7, 0.2);
-            color: #fff;
-            transition: all 0.3s ease;
-        }
-
-        .form-control:focus,
-        .form-select:focus {
-            background: rgba(255, 255, 255, 0.1);
-            border-color: #ffc107;
-            color: #fff;
-            box-shadow: 0 0 20px rgba(255, 193, 7, 0.3);
-        }
-
-        .form-control::placeholder {
-            color: rgba(255, 255, 255, 0.5);
-        }
-
-        .form-label {
-            color: #ffc107;
-            font-weight: 600;
-            margin-bottom: 0.5rem;
-        }
-
-        .btn-complete-payment {
-            background: linear-gradient(135deg, #ffc107 0%, #ff9800 100%);
-            border: none;
-            color: #000;
-            font-weight: 700;
-            padding: 1rem 2rem;
-            border-radius: 10px;
-            transition: all 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
-            position: relative;
-            overflow: hidden;
-            letter-spacing: 1px;
-            font-size: 1.1rem;
-        }
-
-        .btn-complete-payment::before {
-            content: "";
-            position: absolute;
-            top: 0;
-            left: -100%;
-            width: 100%;
-            height: 100%;
-            background: rgba(255, 255, 255, 0.3);
-            transition: left 0.4s ease;
-            z-index: 0;
-        }
-
-        .btn-complete-payment:hover::before {
-            left: 100%;
-        }
-
-        .btn-complete-payment:hover {
-            transform: translateY(-3px) scale(1.05);
-            box-shadow: 0 15px 40px rgba(255, 193, 7, 0.4);
-        }
-
-        .btn-back {
-            background: transparent;
-            border: 2px solid rgba(255, 193, 7, 0.3);
-            color: #ffc107;
-            font-weight: 600;
-            padding: 0.8rem 1.5rem;
-            border-radius: 8px;
-            transition: all 0.3s ease;
-        }
-
-        .btn-back:hover {
-            border-color: #ffc107;
-            background: rgba(255, 193, 7, 0.1);
-            color: #fff;
-        }
-
-        .step-indicator {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            margin-bottom: 2rem;
-            padding: 1rem;
-            background: rgba(255, 193, 7, 0.05);
-            border-radius: 10px;
-            border-left: 4px solid #ffc107;
-        }
-
-        .step {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            font-weight: 600;
-            color: rgba(255, 255, 255, 0.7);
-        }
-
-        .step.active {
-            color: #ffc107;
-        }
-
-        .step-number {
-            width: 30px;
-            height: 30px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 50%;
-            border: 2px solid rgba(255, 193, 7, 0.3);
-            transition: all 0.3s ease;
-        }
-
-        .step.active .step-number {
-            background: #ffc107;
-            color: #000;
-            border-color: #ffc107;
-        }
-
-        .payment-success {
-            display: none;
-            text-align: center;
-            padding: 3rem 2rem;
-        }
-
-        .payment-success.show {
-            display: block;
-        }
-
-        .success-icon {
-            font-size: 5rem;
-            color: #4caf50;
-            margin-bottom: 2rem;
-            animation: bounce-success 0.6s ease-out;
-        }
-
-        @keyframes bounce-success {
-            0% {
-                transform: scale(0) rotate(-45deg);
-                opacity: 0;
-            }
-            50% {
-                transform: scale(1.1) rotate(10deg);
-            }
-            100% {
-                transform: scale(1) rotate(0deg);
-                opacity: 1;
-            }
-        }
-
-        .order-number {
-            font-size: 1.3rem;
-            color: #ffc107;
-            font-weight: 700;
-            margin: 1rem 0;
-            font-family: 'Courier New', monospace;
-            background: rgba(255, 193, 7, 0.1);
-            padding: 1rem;
-            border-radius: 8px;
-            letter-spacing: 2px;
-        }
-
-        @media (max-width: 768px) {
-            .checkout-container {
-                padding: 1rem 0;
-            }
-
-            .checkout-card {
-                margin: 1rem;
-                padding: 1.5rem !important;
-            }
-
-            .summary-item {
-                font-size: 0.95rem;
-            }
-
-            .summary-total {
-                font-size: 1.2rem;
-            }
-
-            .btn-complete-payment {
-                padding: 0.8rem 1.5rem;
-                font-size: 1rem;
-                width: 100%;
-            }
-
-            .step {
-                font-size: 0.85rem;
-            }
-        }
     </style>
 </head>
 
@@ -397,11 +116,13 @@
                             <i class="fas fa-check-circle"></i>
                         </div>
                         <h2 class="text-success mb-3">Payment Successful!</h2>
-                        <p class="text-light mb-4">Terima kasih telah melakukan pemesanan di Enauto Coffee. Pesanan Anda sedang diproses.</p>
+                        <p class="text-light mb-4">Terima kasih telah melakukan pemesanan di Enauto Coffee. Pesanan Anda
+                            sedang diproses.</p>
                         <div class="order-number" id="successOrderNumber">ORD-000000</div>
                         <p class="text-muted small mb-4">Pesanan Anda akan dikirim dalam 30 menit</p>
                         <div class="text-center">
-                            <button type="button" class="btn btn-warning fw-bold" onclick="window.location.href='index.html#order'">
+                            <button type="button" class="btn btn-warning fw-bold"
+                                onclick="window.location.href='index.html#order'">
                                 <i class="fas fa-home me-2"></i>Back to Home
                             </button>
                         </div>
@@ -434,14 +155,15 @@
                                 </div>
                                 <div class="mb-3">
                                     <label for="deliveryAddress" class="form-label">Delivery Address</label>
-                                    <textarea class="form-control" id="deliveryAddress" name="deliveryAddress"
-                                        rows="3" required></textarea>
+                                    <textarea class="form-control" id="deliveryAddress" name="deliveryAddress" rows="3"
+                                        required></textarea>
                                 </div>
                             </div>
 
                             <!-- Payment Method -->
                             <div class="mb-4">
-                                <h5 class="text-warning fw-bold mb-3"><i class="fas fa-wallet me-2"></i>Payment Method</h5>
+                                <h5 class="text-warning fw-bold mb-3"><i class="fas fa-wallet me-2"></i>Payment Method
+                                </h5>
                                 <div class="payment-method active" onclick="selectPaymentMethod(this, 'card')">
                                     <input type="radio" name="paymentMethod" value="card" checked>
                                     <i class="fas fa-credit-card me-2 text-warning"></i>
@@ -483,8 +205,8 @@
                                     </div>
                                     <div class="col-6 mb-3">
                                         <label for="cvv" class="form-label">CVV</label>
-                                        <input type="text" class="form-control" id="cvv" name="cvv"
-                                            placeholder="123" maxlength="3">
+                                        <input type="text" class="form-control" id="cvv" name="cvv" placeholder="123"
+                                            maxlength="3">
                                     </div>
                                 </div>
                             </div>
